--- a/src/assets/scss/styles/mystyles.scss
+++ b/src/assets/scss/styles/mystyles.scss
@@ -12,7 +12,7 @@
 	justify-content: center;
 }
 .page-body-wrapper {
-	background-color: #5c3481 !important;
+	// background-color: #5c3481 !important;
 }
 .user-profile .hovercard .user-image .avatar img {
 	// width: 200px;
